--- a/boutiqueHotelTechnikumAdFrontend/index.html
+++ b/boutiqueHotelTechnikumAdFrontend/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <div id="app"></div>
+    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 
